@@ -2,6 +2,7 @@
 	- fix build with --disable-taskbar
 	- fix build with --disable-shape
         - fix ShowMoveSizeStatus with OpaqueMove/Resize
+	- icewmbg is only re/started when already running
 
 1.2.11: 2003-08-19
 	- added forcedClose window option (Hanspeter Roth)
